5/28/13 "Solute Amount" slider, with some text layout problems
5/28/13 replace LinearFunction with dot.Util.linear
5/28/13 add concentration display (has title layout problem)
5/28/13 workaround for layout of invisible SaturatedIndicator, due to change in semantics of scenery bounds
5/24/13 fix lint errors
5/24/13 first attempt at precipitate view, ridiculously slow for some reason
5/24/13 add "Saturated!" indicator
5/24/13 add Solute combo box
5/24/13 port SolutionNode without constructive area geometry
5/24/13 add "Show Values" check box
5/24/13 wrote my own CheckBox, because sun.CheckBox isn't usable with Property and is embedded in a control panel
5/24/13 completed port of beaker view
5/24/13 add visual cue for inside-bottom of beaker
5/24/13 add label to beaker
5/24/13 use rgb values for solute colors
5/24/13 partial port of beaker view
5/24/13 model ported from Java to JS
5/24/13 set up skeleton for Molarity sim
5/24/13 create molarity repo in GitHub